--- a/FurNature/FurNature/FurNature.csproj
+++ b/FurNature/FurNature/FurNature.csproj
@@ -876,6 +876,7 @@
     <Content Include="Content\light7-build\_config.yml" />
     <Content Include="Content\light7-build\_site\LICENSE" />
     <Content Include="ClassDiagram1.cd" />
+    <None Include="Properties\PublishProfiles\FurNatureConfig.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\BufferGeometryUtils.js" />
     <Content Include="Scripts\cameras\CinematicCamera.js" />
@@ -1180,8 +1181,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
     <Content Include="Views\Account\ConfirmEmail.cshtml" />
@@ -1203,19 +1202,10 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Furnitures\Create.cshtml" />
-    <Content Include="Views\Furnitures\Delete.cshtml" />
-    <Content Include="Views\Furnitures\Details.cshtml" />
-    <Content Include="Views\Furnitures\Edit.cshtml" />
     <Content Include="Views\Furnitures\Index.cshtml" />
     <Content Include="Views\Models\Create.cshtml" />
-    <Content Include="Views\Models\Delete.cshtml" />
     <Content Include="Views\Models\Details.cshtml" />
-    <Content Include="Views\Models\Edit.cshtml" />
     <Content Include="Views\Models\Index.cshtml" />
-    <Content Include="Views\Photos\Create.cshtml" />
-    <Content Include="Views\Photos\Delete.cshtml" />
-    <Content Include="Views\Photos\Details.cshtml" />
     <Content Include="Views\Photos\Edit.cshtml" />
     <Content Include="Views\Photos\Index.cshtml" />
     <Content Include="Scripts\libs\zlib_and_gzip.min.js.map" />
